--- a/LP1 - 2024/TerceiraQuestao_Interface/nbproject/private/private.properties
+++ b/LP1 - 2024/TerceiraQuestao_Interface/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Discente\\AppData\\Roaming\\NetBeans\\21\\build.properties
+user.properties.file=C:\\Users\\Daniel7\\AppData\\Roaming\\NetBeans\\14\\build.properties
